--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^4.14.1",
     "stimulus": "^1.1.1",
     "vali-admin": "^3.0.0",
-    "websocket-extensions": "^0.1.4"
+    "websocket-extensions": "^0.1.4",
+    "serialize-javascript": "^3.1.0",
+    "ssri": "^8.0.1"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
@@ -19,6 +21,7 @@
   },
   "resolutions": {
     "**/kind-of": "^6.0.3",
-    "chokidar": "^3.4.0"
+    "chokidar": "^3.4.0",
+    "ssri": "^8.0.1"
   }
 }
